Partial Update for class presentation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,20 @@ section .container {
 }
 
 /*--------------------------------------------------------------
+# Impossible list
+--------------------------------------------------------------*/
+
+ .list {
+  font-size: 1.25rem;
+  font-weight: bolder;
+  
+}
+
+.sublist {
+  font-weight: lighter;
+}
+
+/*--------------------------------------------------------------
 # Interests
 --------------------------------------------------------------*/
 .interests .icon-box {
